--- a/KCCurrencyConverter/en.lproj/MainStoryboard.storyboard
+++ b/KCCurrencyConverter/en.lproj/MainStoryboard.storyboard
@@ -11,27 +11,158 @@
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mIm-or-Mat" userLabel="From View">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5nm-lu-BbL">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="85" id="a6X-QL-jZJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                        <state key="normal" backgroundImage="blue_button.png">
+                                            <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="zgt-C1-c5p" kind="push" id="Swl-G1-DGl"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="From: USD, United States Dollar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8MN-Ez-cVh">
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vJ9-Qh-j6M">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="260" id="Chi-LC-3ra"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="5nm-lu-BbL" firstAttribute="top" secondItem="mIm-or-Mat" secondAttribute="top" type="default" id="6ph-bQ-xV3"/>
+                                    <constraint firstItem="vJ9-Qh-j6M" firstAttribute="top" secondItem="mIm-or-Mat" secondAttribute="top" constant="40" id="BNK-TU-mQz"/>
+                                    <constraint firstItem="8MN-Ez-cVh" firstAttribute="leading" secondItem="vJ9-Qh-j6M" secondAttribute="leading" type="default" id="FkJ-zh-8Xl"/>
+                                    <constraint firstItem="vJ9-Qh-j6M" firstAttribute="centerX" secondItem="5nm-lu-BbL" secondAttribute="centerX" type="default" id="Xxx-gN-ll2"/>
+                                    <constraint firstItem="5nm-lu-BbL" firstAttribute="leading" secondItem="mIm-or-Mat" secondAttribute="leading" type="default" id="b5c-vv-MJZ"/>
+                                    <constraint firstItem="5nm-lu-BbL" firstAttribute="trailing" secondItem="mIm-or-Mat" secondAttribute="trailing" type="default" id="eKC-8O-JcV"/>
+                                    <constraint firstItem="8MN-Ez-cVh" firstAttribute="top" secondItem="mIm-or-Mat" secondAttribute="top" constant="10" id="oez-ke-2yy"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qk3-Uz-Oy0" userLabel="To View">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djg-9W-Nrt">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="85" id="YeH-jn-eB5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                        <state key="normal" backgroundImage="blue_button.png">
+                                            <color key="titleColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="zgt-C1-c5p" kind="push" id="2B5-8x-yGG"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="To: USD, United States Dollar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGQ-hx-H59">
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ssr-gC-Gso">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="260" id="336-Ph-iaO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Ssr-gC-Gso" firstAttribute="top" secondItem="qk3-Uz-Oy0" secondAttribute="top" constant="40" id="0YN-kP-nDD"/>
+                                    <constraint firstItem="djg-9W-Nrt" firstAttribute="top" secondItem="qk3-Uz-Oy0" secondAttribute="top" type="default" id="3nH-I1-SN7"/>
+                                    <constraint firstItem="djg-9W-Nrt" firstAttribute="trailing" secondItem="qk3-Uz-Oy0" secondAttribute="trailing" type="default" id="3qg-aD-dCH"/>
+                                    <constraint firstItem="djg-9W-Nrt" firstAttribute="leading" secondItem="qk3-Uz-Oy0" secondAttribute="leading" type="default" id="5yE-st-tMW"/>
+                                    <constraint firstItem="oGQ-hx-H59" firstAttribute="top" secondItem="qk3-Uz-Oy0" secondAttribute="top" constant="10" id="N3o-jM-OlN"/>
+                                    <constraint firstItem="Ssr-gC-Gso" firstAttribute="centerX" secondItem="djg-9W-Nrt" secondAttribute="centerX" type="default" id="YqH-7w-qfO"/>
+                                    <constraint firstItem="oGQ-hx-H59" firstAttribute="leading" secondItem="Ssr-gC-Gso" secondAttribute="leading" type="default" id="j4L-xf-f2w"/>
+                                    <constraint firstAttribute="height" constant="85" type="user" id="v0J-s3-dgt"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qk3-Uz-Oy0" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="CcJ-CA-Rhf"/>
+                            <constraint firstItem="qk3-Uz-Oy0" firstAttribute="top" secondItem="mIm-or-Mat" secondAttribute="bottom" constant="10" type="user" id="Ich-tV-xRc"/>
+                            <constraint firstItem="mIm-or-Mat" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="SfZ-PN-cyJ"/>
+                            <constraint firstItem="mIm-or-Mat" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="a9k-gk-dj2"/>
+                            <constraint firstItem="qk3-Uz-Oy0" firstAttribute="top" secondItem="3" secondAttribute="top" constant="115" id="hrt-cl-oeJ"/>
+                            <constraint firstAttribute="trailing" secondItem="qk3-Uz-Oy0" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rcN-0o-PnI"/>
+                            <constraint firstAttribute="trailing" secondItem="mIm-or-Mat" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="uRc-Or-WQ9"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Currency Converter" id="Qi5-nQ-6jU"/>
+                    <navigationItem key="navigationItem" title="Currency Converter" id="Qi5-nQ-6jU">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="nzO-k2-QUd"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="fromCurrencyLabel" destination="8MN-Ez-cVh" id="M38-Ir-sQ3"/>
+                        <outlet property="fromCurrencyTextField" destination="vJ9-Qh-j6M" id="Kxk-1x-tu3"/>
+                        <outlet property="toCurrencyLabel" destination="oGQ-hx-H59" id="FU9-lc-n6d"/>
+                        <outlet property="toCurrencyTextField" destination="Ssr-gC-Gso" id="7rN-uz-f4x"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="682" y="78"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="eXL-No-xlJ">
+        <!--Currency Select View Controller-->
+        <scene sceneID="k7D-Pu-vTA">
             <objects>
-                <viewController id="ctx-M1-cwg" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="QfM-Bv-jgG">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8S3-vt-iq4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="zgt-C1-c5p" customClass="KCCurrencySelectViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="bHv-R8-NoU">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CurrencyType" id="6SZ-71-wrm">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdI-9m-IWf">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="sdI-9m-IWf" firstAttribute="top" secondItem="6SZ-71-wrm" secondAttribute="top" constant="11" id="aqu-To-ca1"/>
+                                    <constraint firstItem="sdI-9m-IWf" firstAttribute="leading" secondItem="6SZ-71-wrm" secondAttribute="leading" constant="20" type="default" id="igr-Vn-iOa"/>
+                                </constraints>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="zgt-C1-c5p" id="cZ1-UG-T9G"/>
+                            <outlet property="delegate" destination="zgt-C1-c5p" id="HKl-VZ-TAf"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="H8Y-5R-UmP"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I4G-ft-Nr2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1071" y="78"/>
+            <point key="canvasLocation" x="1137" y="78"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="klQ-0j-HBP">
@@ -53,9 +184,24 @@
             <point key="canvasLocation" x="278" y="78"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="blue_button.png" width="280" height="100"/>
+    </resources>
     <classes>
+        <class className="KCCurrencySelectViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KCCurrencySelectViewController.h"/>
+        </class>
         <class className="KCViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KCViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="fromCurrencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fromCurrencyTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="toCurrencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="toCurrencyTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -63,4 +209,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="Swl-G1-DGl"/>
+    </inferredMetricsTieBreakers>
 </document>
