--- a/KCCurrencyConverter/en.lproj/MainStoryboard.storyboard
+++ b/KCCurrencyConverter/en.lproj/MainStoryboard.storyboard
@@ -143,7 +143,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdI-9m-IWf">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="sdI-9m-IWf">
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -163,6 +163,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Currencies" id="H8Y-5R-UmP"/>
+                    <connections>
+                        <outlet property="tableView" destination="bHv-R8-NoU" id="fcH-E3-Gn7"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I4G-ft-Nr2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -194,6 +197,9 @@
     <classes>
         <class className="KCCurrencySelectViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KCCurrencySelectViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
         </class>
         <class className="KCHomeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KCHomeViewController.h"/>
