--- a/KCCurrencyConverter/en.lproj/MainStoryboard.storyboard
+++ b/KCCurrencyConverter/en.lproj/MainStoryboard.storyboard
@@ -121,11 +121,67 @@
                         <outlet property="fromCurrencyTextField" destination="vJ9-Qh-j6M" id="Kxk-1x-tu3"/>
                         <outlet property="toCurrencyLabel" destination="oGQ-hx-H59" id="FU9-lc-n6d"/>
                         <outlet property="toCurrencyTextField" destination="Ssr-gC-Gso" id="7rN-uz-f4x"/>
+                        <segue destination="5OI-Ki-rZf" kind="modal" identifier="Info" modalTransitionStyle="partialCurl" id="XLJ-wZ-Yzx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="682" y="78"/>
+        </scene>
+        <!--Info View Controller-->
+        <scene sceneID="P1X-9d-OFw">
+            <objects>
+                <viewController id="5OI-Ki-rZf" customClass="KCInfoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GhR-Xt-6c0">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Created by Kyle Clegg as a code sample for his Cocoa Camp application." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="IZT-bV-cdg">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="DKW-dS-lDZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Disclaimer" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="bRJ-bZ-rHD">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="139" id="vvL-sJ-Mk2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="License" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="DBX-g0-ZCC">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Jo8-G2-Yv7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="DBX-g0-ZCC" firstAttribute="leading" secondItem="GhR-Xt-6c0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="FBz-m6-bEU"/>
+                            <constraint firstAttribute="trailing" secondItem="bRJ-bZ-rHD" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="G6F-JY-f1M"/>
+                            <constraint firstItem="bRJ-bZ-rHD" firstAttribute="leading" secondItem="GhR-Xt-6c0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="GUm-0B-0r0"/>
+                            <constraint firstAttribute="trailing" secondItem="DBX-g0-ZCC" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="LYv-k5-uOs"/>
+                            <constraint firstItem="bRJ-bZ-rHD" firstAttribute="top" secondItem="IZT-bV-cdg" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="QrS-8j-EhT"/>
+                            <constraint firstAttribute="bottom" secondItem="DBX-g0-ZCC" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="c1D-Mg-7ac"/>
+                            <constraint firstAttribute="trailing" secondItem="IZT-bV-cdg" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fAF-rq-Kwp"/>
+                            <constraint firstItem="DBX-g0-ZCC" firstAttribute="top" secondItem="bRJ-bZ-rHD" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="qqI-QG-YoF"/>
+                            <constraint firstItem="IZT-bV-cdg" firstAttribute="leading" secondItem="GhR-Xt-6c0" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="xq2-FF-ldL"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="disclaimerLabel" destination="bRJ-bZ-rHD" id="eH9-Hk-afo"/>
+                        <outlet property="licenseLabel" destination="DBX-g0-ZCC" id="BRd-GJ-tTG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="INk-EU-UjJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1137" y="772"/>
         </scene>
         <!--Currency Select View Controller - Currencies-->
         <scene sceneID="k7D-Pu-vTA">
@@ -208,6 +264,13 @@
                 <relationship kind="outlet" name="fromCurrencyTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="toCurrencyLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="toCurrencyTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="KCInfoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KCInfoViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="disclaimerLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="licenseLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
